--- a/roles/web/templates/nginx.conf.j2
+++ b/roles/web/templates/nginx.conf.j2
@@ -1,6 +1,9 @@
 user rletters_deploy rletters_deploy;
 worker_processes 5;
 
+error_log /var/log/nginx/error.log;
+pid /var/run/nginx.pid;
+
 events {
   worker_connections 1024;
 }
@@ -8,6 +11,11 @@ events {
 http {
   include mime.types;
   default_type application/octet-stream;
+
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+  access_log /var/log/nginx/access.log main;
 
   sendfile on;
 
